// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`throw_expression.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function save(filename = throw new TypeError("Argument required")) {}

lint(ast, {
  with: () => throw new Error("avoid using 'with' statements.")
});

function getEncoder(encoding) {
  const encoder = encoding === "utf8" ? new UTF8Encoder()
                : encoding === "utf16le" ? new UTF16Encoder(false)
                : encoding === "utf16be" ? new UTF16Encoder(true)
                : throw new Error("Unsupported encoding");
}

class Product {
  get id() { return this._id; }
  set id(value) { this._id = value || throw new Error("Invalid value"); }
}

=====================================output=====================================
function save(filename = throw new TypeError("Argument required")) {}

lint(ast, {
  with: () => throw new Error("avoid using 'with' statements."),
});

function getEncoder(encoding) {
  const encoder =
    encoding === "utf8"
      ? new UTF8Encoder()
      : encoding === "utf16le"
        ? new UTF16Encoder(false)
        : encoding === "utf16be"
          ? new UTF16Encoder(true)
          : throw new Error("Unsupported encoding");
}

class Product {
  get id() {
    return this._id;
  }
  set id(value) {
    this._id = value || throw new Error("Invalid value");
  }
}

================================================================================
`;

exports[`throw_expression.js format[acorn] 1`] = `
"Unexpected token (1:26)
> 1 | function save(filename = throw new TypeError("Argument required")) {}
    |                          ^
  2 |
  3 | lint(ast, {
  4 |   with: () => throw new Error("avoid using 'with' statements.")
Cause: Unexpected token (1:25)"
`;

exports[`throw_expression.js format[espree] 1`] = `
"Unexpected token throw (1:26)
> 1 | function save(filename = throw new TypeError("Argument required")) {}
    |                          ^
  2 |
  3 | lint(ast, {
  4 |   with: () => throw new Error("avoid using 'with' statements.")
Cause: Unexpected token throw"
`;

exports[`throw_expression.js format[meriyah] 1`] = `
"Unexpected token: 'throw' (1:26)
> 1 | function save(filename = throw new TypeError("Argument required")) {}
    |                          ^^^^^
  2 |
  3 | lint(ast, {
  4 |   with: () => throw new Error("avoid using 'with' statements.")
Cause: [1:25-1:30]: Unexpected token: 'throw'"
`;

exports[`throw_expression.js format[oxc] 1`] = `
"Unexpected token (1:26)
> 1 | function save(filename = throw new TypeError("Argument required")) {}
    |                          ^^^^^
  2 |
  3 | lint(ast, {
  4 |   with: () => throw new Error("avoid using 'with' statements.")"
`;

exports[`throw_expression.js format[yuku] 1`] = `
"'throw' is reserved and cannot be used as an identifier (1:26)
> 1 | function save(filename = throw new TypeError("Argument required")) {}
    |                          ^^^^^
  2 |
  3 | lint(ast, {
  4 |   with: () => throw new Error("avoid using 'with' statements.")"
`;
